--- a/Udemy_versa/viceversa-project/templates/home.html
+++ b/Udemy_versa/viceversa-project/templates/home.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Vice Versa</h1>
 
-    <form>
+    <form action="{% url 'reverse' %}">
 
     <textarea rows="15" cols="50" name="usertext"></textarea>
     <br> <br>
