--- a/Flask/templates/freedom.html
+++ b/Flask/templates/freedom.html
@@ -1,25 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freedom</title>
-    <style type="text/css">
-    	body {
+{% extends "base.html" %}
+{% block style %}
+    a {background: rgba(208, 190, 164, 0.99)}
+    body {
     		background-image: url("/static/wrw.jpg");
             background-size: cover;
     	}
-        #fb {color: rgb(216, 0, 0);}
-        #div1 {background: rgba(255, 255, 255, 0.6);
-        width: 450px;
-    	height: 1000px}
-    </style>
-</head>
-<body>
+    #fb {color: rgb(216, 0, 0);}
+    #div1 {background: rgba(255, 255, 255, 0.6);
+            width: 450px;
+    	    height: 1000px}
+{% endblock %}
+{% block title %}Жыве{% endblock %}
+{% block body %}
+    <a href="/">Пройти еще раз</a>
     <div id="div1">
     <h1 id="fb">ЖЫВЕ БЕЛАРУСЬ</h1>
-    <p>{{name}}, за нами свобода!!</p>
+    <p>{{name}}, тест пройден!!</p>
     <img src="/static/free.jpg" width="400px">
     </div>
-</body>
-</html>
+{% endblock %}
