--- a/Flask/templates/pidory.html
+++ b/Flask/templates/pidory.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pidarasas</title>
-    <style type="text/css">
-    	body {background: rgb(89, 63, 0)}
-    	#div1 {background: rgba(198, 160, 5, 0.6);
+{% extends "base.html" %}
+{% block style %}
+    a {background: rgba(208, 190, 164, 0.99)}
+    body {background: rgb(89, 63, 0)}
+    #div1 {background: rgba(198, 160, 5, 0.6);
     		width: 500px;}
-    </style>
-</head>
-<body>
-	<div id="div1">
+{% endblock %}
+{% block title %}Пидор{% endblock %}
+{% block body %}
+    <a href="/">Пройти еще раз</a>
+    <div id="div1">
     <h1>Пидарас -это диагноз</h1>
     <p>И {{name}} в их числе</p>
     <img src="/static/pidor.jpg" width="450px">
     </div>
-</body>
-</html>
+{% endblock %}
